Meraki-01 update core to load permissions module

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "extra": {
       "laravel": {
         "providers": [
-          "Meraki\\Core\\CoreServiceProvider"
+          "MerakiCoreServiceProvider"
         ]
       }
     }
