--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "extra": {
       "laravel": {
         "providers": [
-          "MerakiCoreServiceProvider"
+          "CoreServiceProvider"
         ]
       }
     }
