Meraki-01 update core service name

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "extra": {
       "laravel": {
         "providers": [
-          "CoreServiceProvider"
+          "src/CoreServiceProvider"
         ]
       }
     }
